src/mds/snapshots/lustre_collector__mds__client_count_parser__test__client_count_parser_one_client.snap
---
source: src/mds/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: MDT,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "es01a-MDT0000",
                    ),
                    value: 1,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: MDT,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-MDT0000",
                    ),
                    value: 0,
                },
            ),
        ),
    ],
    "",
)
