src/mds/snapshots/lustre_collector__mds__client_count_parser__test__client_count_parser_two_clients.snap
---
source: src/mds/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: MDT,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-MDT0000",
                    ),
                    value: 2,
                },
            ),
        ),
    ],
    "",
)
